--- a/src/content/blog/framework/index.mdx
+++ b/src/content/blog/framework/index.mdx
@@ -2,7 +2,7 @@
 title: CI4 frameworkda loyihani qismlarga bo'lish
 description: boshdan o'tgan nimadir 
 date: 2025-07-11
-tags: ['cI4', 'framework']
+tags: ['cI4', 'frameworks']
 authors: ['snaxcyz']
 ---
 
@@ -12,7 +12,7 @@ Codeigniter kapot ostidanoq bitta yadro (system) asosida bir necha ilova qurish 
 
 Lekin resurslar bir ammo bir appning o’zini bo’lib tashash kerak bo’lsachi? Albatta MVC ichiniyam default app papkalari orqali manage qilish imkoni bor, ammo kattaroq appda bu bosh og’riqqa aylanishi mumkin. Shu sababli quyidagi struktura ishni osonlashtiradi.
 
-Masalan tassavvur qilaylik:
+Masalan:
 
 ```
 app:
